Método para gerar IDs únicos.