@@ -1,11 +1,31 @@
 package com.example.my_fragment;
 
+import android.content.Context;
+import android.content.SharedPreferences;
+import android.util.Log;
+
 public abstract class ComponentSimpleModel {
 
-	private String instanceId="";
-	private Long targetId = new Long(1); 
-	
-	
+	private String instanceId = "";
+	private Long targetId = Long.valueOf(1);
+
+	public static String SHARED_PREFS_NAME = "gw_shared_prefs";
+
+	public static Long getUniqueId(Context ctx) {
+		// pega primeiro id disponivel
+		SharedPreferences settings = ctx.getSharedPreferences(
+				SHARED_PREFS_NAME, 0);
+		Long id = settings.getLong("unique_id", 0);
+
+		// salva o novo id disponivel
+		SharedPreferences.Editor editor = settings.edit();
+		editor.putLong("unique_id", id + 1);
+		editor.commit();
+
+		Log.e("id unico :", ""+id);
+		return id;
+	}
+
 	public Long getTargetId() {
 		return targetId;
 	}
@@ -23,7 +43,7 @@ public abstract class ComponentSimpleModel {
 	}
 
 	public abstract void save();
-	
+
 	public abstract void restore();
-	
+
 }
